--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/reporting/ActivityReportForm.jrxml
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/reporting/ActivityReportForm.jrxml
@@ -30,28 +30,31 @@
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="15">
-			<textField hyperlinkType="None">
-				<reportElement stretchType="RelativeToTallestObject" x="0" y="0" width="572" height="13" isPrintWhenDetailOverflows="true"/>
+		<band height="14">
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true" hyperlinkType="None">
+				<reportElement x="0" y="0" width="572" height="13" isPrintWhenDetailOverflows="true" forecolor="#000000" backcolor="#FFFFFF"/>
+				<box padding="0">
+					<pen lineWidth="0.0" lineStyle="Solid"/>
+				</box>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{info}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<pageFooter>
-		<band height="50">
+		<band height="20">
 			<staticText>
-				<reportElement x="0" y="24" width="61" height="26"/>
+				<reportElement x="0" y="6" width="61" height="14"/>
 				<textElement verticalAlignment="Bottom"/>
 				<text><![CDATA[Printed on ]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yy h:mm:ss a" hyperlinkType="None">
-				<reportElement x="60" y="24" width="217" height="26"/>
+				<reportElement x="60" y="6" width="217" height="14"/>
 				<textElement verticalAlignment="Bottom"/>
 				<textFieldExpression class="java.util.Date"><![CDATA[new Date()]]></textFieldExpression>
 			</textField>
 			<textField hyperlinkType="None">
-				<reportElement x="504" y="24" width="68" height="26"/>
+				<reportElement x="504" y="6" width="68" height="14"/>
 				<textElement textAlignment="Right" verticalAlignment="Bottom"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$V{PAGE_NUMBER}.toString()]]></textFieldExpression>
 			</textField>
