--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/reporting/NewPatientCountByStudyClinic.jrxml
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/reporting/NewPatientCountByStudyClinic.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created using an evaluation version of JasperAssistant (http://www.jasperassistant.com) -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="CBSRReports" pageWidth="612" pageHeight="791" whenNoDataType="AllSectionsNoDetail" columnWidth="544" leftMargin="34" rightMargin="34" topMargin="30" bottomMargin="30">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="NewPatientCountByStudyClinic" pageWidth="612" pageHeight="791" whenNoDataType="AllSectionsNoDetail" columnWidth="544" leftMargin="34" rightMargin="34" topMargin="30" bottomMargin="30">
 	<property name="com.jasperassistant.designer.Grid" value="true"/>
 	<property name="com.jasperassistant.designer.SnapToGrid" value="true"/>
 	<property name="com.jasperassistant.designer.GridWidth" value="12"/>
