--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/reporting/BasicReport.jrxml
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/reporting/BasicReport.jrxml
@@ -38,19 +38,24 @@
 	<pageFooter>
 		<band height="20">
 			<staticText>
-				<reportElement x="0" y="6" width="61" height="14"/>
+				<reportElement x="0" y="6" width="50" height="14"/>
 				<textElement verticalAlignment="Bottom"/>
 				<text><![CDATA[Printed on ]]></text>
 			</staticText>
-			<textField pattern="dd/MM/yy h:mm:ss a">
-				<reportElement x="60" y="6" width="217" height="14"/>
+			<textField pattern="yyyy-MM-dd HH:mm">
+				<reportElement x="49" y="6" width="217" height="14"/>
 				<textElement verticalAlignment="Bottom"/>
 				<textFieldExpression class="java.util.Date"><![CDATA[new Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="476" y="6" width="68" height="14"/>
+				<reportElement x="423" y="0" width="80" height="20"/>
 				<textElement textAlignment="Right" verticalAlignment="Bottom"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$V{PAGE_NUMBER}.toString()]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report">
+				<reportElement x="503" y="0" width="40" height="20"/>
+				<textElement verticalAlignment="Bottom"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageFooter>
