--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/reporting/BasicReport.jrxml
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/reporting/BasicReport.jrxml
@@ -36,22 +36,6 @@
 		<band height="20"/>
 	</detail>
 	<pageFooter>
-		<band height="20">
-			<staticText>
-				<reportElement x="0" y="6" width="61" height="14"/>
-				<textElement verticalAlignment="Bottom"/>
-				<text><![CDATA[Printed on ]]></text>
-			</staticText>
-			<textField pattern="dd/MM/yy h:mm:ss a">
-				<reportElement x="60" y="6" width="217" height="14"/>
-				<textElement verticalAlignment="Bottom"/>
-				<textFieldExpression class="java.util.Date"><![CDATA[new Date()]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="476" y="6" width="68" height="14"/>
-				<textElement textAlignment="Right" verticalAlignment="Bottom"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$V{PAGE_NUMBER}.toString()]]></textFieldExpression>
-			</textField>
-		</band>
+		<band height="20"/>
 	</pageFooter>
 </jasperReport>
